--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Tip Calculator</string>
     <string name="action_settings">Settings</string>
+    <string name="bill_amount_hint">Bill Amount</string>
+    <string name="tip_percentage_hint">Tip Percentage</string>
+    <string name="bill_label">Bill</string>
+    <string name="tip_label">Tip</string>
+    <string name="total_label">Total</string>
 </resources>
